/**
 * Copyright 2017-2018 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package cz.o2.proxima.server.test;

/* This is message with just a single field. */
message SimpleMessage {

  uint32 first = 1;

}

/* This is message with two fields, wire compatible with SimpleMessage */
message ExtendedMessage {

  uint32 first = 1;
  uint32 second = 2;

}

